--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -5,27 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css"
+    />
     <script
       src="https://cdn.socket.io/4.5.0/socket.io.min.js"
       integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k"
       crossorigin="anonymous"
     ></script>
     <style>
-      #chat {
-        /* background-color: lightblue; */
-      }
       #chat_content {
-        background-color: lightblue;
-        background-size: cover;
-        background-position: center;
+        background-color: #8295b8;
+        padding: 20px;
+        width: 500px;
+        height: 500px;
+      }
+      .chat_box {
+        background-color: #ededed;
+        width: 200px;
+        height: 30px;
+        margin: 20px;
+      }
+      .chat_me {
+        position: relative;
+        left: 250px;
+      }
+      .chat_other {
+        position: relative;
+        left: 15px;
       }
     </style>
   </head>
   <body>
     <div id="chat">
       <div id="chat_content">
-        <div class="chat_client"></div>
-        <div class="chat_server"></div>
+        <div class="chat_box chat_me"></div>
+        <div class="chat_box chat_other"></div>
+        <div class="chat_box chat_other"></div>
+        <div class="chat_box chat_me"></div>
       </div>
       <div>
         <input type="text" name="comment" />
