--- a/views/chat2.ejs
+++ b/views/chat2.ejs
@@ -8,10 +8,22 @@
     <!-- css file -->
     <link rel="stylesheet" href="../static/css/style.css" />
     <!-- bootstrap cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
     <!-- fontawesome cdn -->
-    <script src="https://kit.fontawesome.com/acfe1c41fb.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/acfe1c41fb.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- socket cdn -->
     <script
       src="https://cdn.socket.io/4.5.0/socket.io.min.js"
@@ -28,83 +40,91 @@
           <img src="../static/img/odung.jpg" />
         </div>
         <div class="active">
-            <h4>Jerry</h4>
-            <h6>3 hours ago...</64>
+          <h4>Jerry</h4>
+          <h6>3 hours ago...</h6>
         </div>
         <div class="header-icons">
-            <i class="fa fa-phone"></i>
-            <i class="fa fa-video-camera"></i>
-            <i class="fa fa-info-circle"></i>
+          <i class="fa fa-phone"></i>
+          <i class="fa fa-video-camera"></i>
+          <i class="fa fa-info-circle"></i>
         </div>
       </div>
       <!-- chat-page -->
       <div class="chat-page">
         <div class="msg-inbox">
-            <div class="chats">
-                <div class="msg-page">
-
-                    <!-- received chats -->
-                    <div class="received-chats">
-                        <div class="received-chats-img">
-                            <img src="../static/img/odung.jpg">
-                        </div>
-                        <div class="received-msg">
-                            <div class="received-msg-inbox">
-                                <p>Hi !! This is message from Lewis</p>
-                                <span class="time">11:01 PM | October 11 </span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- outgoing chats -->
-                    <div class="outgoing-chats">
-                      <div class="outgoing-chats-msg">
-                              <p>Hi !! This is message from me</p>
-                              <span class="time">11:01 PM | October 11 </span>
-                      </div>
-                      <div class="outgoing-chats-img">
-                          <img src="../static/img/odung.jpg">
-                      </div>
-                    </div>
-
-                    <!-- received chats -->
-                    <div class="received-chats">
-                        <div class="received-chats-img">
-                            <img src="../static/img/odung.jpg">
-                        </div>
-                        <div class="received-msg">
-                            <div class="received-msg-inbox">
-                                <p>Hi !! This is 2nd message from Lewis</p>
-                                <span class="time">11:01 PM | October 11 </span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- outgoing chats -->
-                    <div class="outgoing-chats">
-                      <div class="outgoing-chats-msg">
-                              <p>Hi !! This is 2nd message from me</p>
-                              <span class="time">11:01 PM | October 11 </span>
-                      </div>
-                      <div class="outgoing-chats-img">
-                          <img src="../static/img/odung.jpg">
-                      </div>
-                    </div>
-
-                    <!-- received chats -->
-                    <div class="received-chats">
-                        <div class="received-chats-img">
-                            <img src="../static/img/odung.jpg">
-                        </div>
-                        <div class="received-msg">
-                            <div class="received-msg-inbox">
-                                <p>Hi !! This is 3nd message from Lewis</p>
-                                <span class="time">11:01 PM | October 11 </span>
-                            </div>
-                        </div>
-                    </div>
-
-                    
+          <div class="chats">
+            <div class="msg-page">
+              <!-- received chats -->
+              <div class="received-chats">
+                <div class="received-chats-img">
+                  <img src="../static/img/odung.jpg" />
                 </div>
+                <div class="received-msg">
+                  <div class="received-msg-inbox">
+                    <p>Hi !! This is message from Lewis</p>
+                    <span class="time">11:01 PM | October 11 </span>
+                  </div>
+                </div>
+              </div>
+              <!-- outgoing chats -->
+              <div class="outgoing-chats">
+                <div class="outgoing-chats-msg">
+                  <p>Hi !! This is message from me</p>
+                  <span class="time">11:01 PM | October 11 </span>
+                </div>
+                <div class="outgoing-chats-img">
+                  <img src="../static/img/odung.jpg" />
+                </div>
+              </div>
+
+              <!-- received chats -->
+              <div class="received-chats">
+                <div class="received-chats-img">
+                  <img src="../static/img/odung.jpg" />
+                </div>
+                <div class="received-msg">
+                  <div class="received-msg-inbox">
+                    <p>Hi !! This is 2nd message from Lewis</p>
+                    <span class="time">11:01 PM | October 11 </span>
+                  </div>
+                </div>
+              </div>
+              <!-- outgoing chats -->
+              <div class="outgoing-chats">
+                <div class="outgoing-chats-msg">
+                  <p>Hi !! This is 2nd message from me</p>
+                  <span class="time">11:01 PM | October 11 </span>
+                </div>
+                <div class="outgoing-chats-img">
+                  <img src="../static/img/odung.jpg" />
+                </div>
+              </div>
+
+              <!-- received chats -->
+              <div class="received-chats">
+                <div class="received-chats-img">
+                  <img src="../static/img/odung.jpg" />
+                </div>
+                <div class="received-msg">
+                  <div class="received-msg-inbox">
+                    <p>Hi !! This is 3nd message from Lewis</p>
+                    <span class="time">11:01 PM | October 11 </span>
+                  </div>
+                </div>
+              </div>
+
+              <!-- outgoing chats -->
+              <div class="outgoing-chats">
+                <div class="outgoing-chats-msg">
+                  <p>Hi !! This is 2nd message from me</p>
+                  <span class="time">11:01 PM | October 11 </span>
+                </div>
+                <div class="outgoing-chats-img">
+                  <img src="../static/img/odung.jpg" />
+                </div>
+              </div>
             </div>
+          </div>
         </div>
         <!-- msg-bottom -->
         <div class="msg-bottom">
@@ -115,10 +135,14 @@
             <i class="fa fa-smile-o"></i>
           </div>
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="write message...">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="write message..."
+            />
             <div class="input-group-append">
               <span class="input-group-text">
-              <i class="fa fa-paper-plane"></i>
+                <i class="fa fa-paper-plane"></i>
               </span>
             </div>
           </div>
